<resources>
    <string name="app_name">navigation-slides</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FitNow</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_cardio">Cardio</string>
    <string name="menu_bodybuilding">Body Building</string>
    <string name="menu_crossfit">CrossFit</string>
    <string name="menu_at_home">At Home</string>
    <string name="menu_results">Results</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_bio">Bio</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_main">Main Menu</string>

    <string name="minute_total_10">10 minutes</string>
    <string name="minute_total_15">15 minutes</string>
    <string name="minute_total_20">20 minutes</string>
    <string name="minute_total_24">24 minutes</string>
    <string name="exercise_amount_5">5 exercises</string>

    <string name="triceps">Tricep Dips</string>
    <string name="chest_stretch">Chest Stretch</string>
    <string name="decline_pushup">Decline Pushups</string>
    <string name="pushup">Pushups</string>
    <string name="arm_circles">Arm Circles</string>

    <string name="arm_stretch">Arm Stretch</string>
    <string name="narrow_pushups">Narrow Pushups</string>
    <string name="dumbbell_press">Dumbbell Press</string>
    <string name="lunges">Lunges</string>
    <string name="reverse_flys">Reverse Flys</string>

    <string name="squats">Squats</string>
    <string name="hip_stretch">Hip Stretch</string>
    <string name="mountain_climbers">Mountain Climb</string>
    <string name="plank">Plank</string>
    <string name="v_ups">V-Ups</string>

    <string name="jogging">Jogging</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="calf_stretch">Calf Stretch</string>

    <string name="times20">3x20</string>
    <string name="times15">3x15</string>
    <string name="times12">3x12</string>

    <string name="time1min">1:00</string>
    <string name="time3min">3:00</string>
    <string name="time5min">5:00</string>
    <string name="time6min">6:00</string>
    <string name="time10min">10:00</string>

    <string name="dotted1">dotted</string>
    <string name="dotted2">dotted</string>
    <string name="dotted3">dotted</string>
    <string name="dotted4">dotted</string>
    <string name="dotted5">dotted</string>

    <string name="results">Results</string>
    <string name="completed"><u>Completed Goals</u></string>
    <string name="completedWorkouts"><u>Completed Workouts</u></string>
    <string name="graph"><u>Weight-Tracking Graph</u></string>
    <string name="remaining"><u>Remaining Goals</u></string>
    <string name="c1">Do chest workout</string>
    <string name="c2">Do 50 push-ups</string>
    <string name="c3">Run 3 miles</string>
    <string name="c4">Do 3x15 reverse flys</string>
    <string name="r1">Do ab workout</string>
    <string name="r2">Do 100 crunches</string>
    <string name="r3">Do 3x20 lunges</string>
    <string name="r4">Do 3x12 narrow pushups</string>

    <string name="soundswitch">Sound</string>
    <string name="musicswitch">Music</string>
    <string name="notswitch">Notifications</string>
    <string name="vibrateswitch">Vibrate</string>
    <string name="fitnow">Fit Now</string>

    <string name="name_sample">Biola Bob</string>
    <string name="age_sample">21</string>
    <string name="weight_sample">160 lbs</string>
    <string name="style_sample">CrossFit</string>
    <string name="experience_sample">Moderate</string>

    <string name="name_title">Name</string>
    <string name="weight_title">Weight</string>
    <string name="age_title">Age</string>
    <string name="experience_title">Experience</string>
    <string name="style_title">Style</string>
    <string name="edit_title">EDIT</string>

    <string name="completed_goal">Checked Box</string>
    <string name="uncompleted_goal">Unchecked Box</string>
    <string name="goal">Goal</string>
    <string name="add_goal">Add Goal</string>
    <string name="add_workout">Add Workout</string>





</resources>